...

    Column {
        if (!isExpanded) {
            Row(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("quick_action_card")
                    .clickable { showQuickActions.value = !showQuickActions.value },
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Text(
                    modifier = Modifier
                        .padding(16.dp),
...
                    .fillMaxWidth()
                    .padding(horizontal = 16.dp)
            ) {
                Row(modifier = Modifier.fillMaxWidth()) {
                    QuickActionChip(
                        modifier = Modifier.weight(1f)
                            .testTag("quick_action_chip"),
                        leadingIcon = {
                            Icon(
                                imageVector = Icons.Default.CheckCircle,
                                contentDescription = "Add Checklist",
                                Modifier.size(16.dp),
                                tint = if (isSystemInDarkTheme()) Color.Black else Color.White
...
